# backend/server.js
@@ -3,6 +3,7 @@ const cookieParser = require("cookie-parser");
 const logger = require('./loggers/logger');
 const logRequests = require('./loggers/requestLogger');
 const { handleError } = require('./middleware/errorMiddleware');
+const fileUpload = require('express-fileupload');
 // Api Docs
 const swaggerJsdoc = require('swagger-jsdoc');
 const swaggerUi = require('swagger-ui-express');
@@ -15,6 +16,7 @@ const companyRoutes = require('./routes/company');
 const staffRoutes = require('./routes/staff');
 const forgotPasswordRoute = require('./routes/forgotPassword');
 const jobFileRoutes = require("./routes/jobFile");
+const userRoutes = require("./routes/user");
 
 
 const path = require('path');
@@ -42,6 +44,7 @@ const PORT = process.env.PORT || 5000;
 
 const app = express();
 app.use(cookieParser())
+app.use(fileUpload());
 app.use(express.json()); // cookies parser
 app.use(cors());
 app.use(logRequests)
@@ -51,6 +54,7 @@ app.use('/api/staff', staffRoutes);
 app.use('/api/companies', companyRoutes);
 app.use('/api/jobs', jobRoutes);
 app.use('/api/jobFiles', jobFileRoutes);
+app.use('/api/user', userRoutes);
 app.use('/api', forgotPasswordRoute);
 
 
